--- a/docs/water-quality-decision-matrix.Rmd
+++ b/docs/water-quality-decision-matrix.Rmd
@@ -41,10 +41,7 @@ Tracking the attainment of bay segment specific targets for chlorophyll and ligh
 The management category or action is based on the combination of annual outcomes for chlorophyll and light attenuation.   
 
 ```{r}
-p <- show_matrix(epcdata, yrrng = c(1975, maxyr), txtsz = 3, abbrev = T, historic = T, family = fml, plotly = T, width = 300, height = 700) %>% 
-    plotly::config(
-      toImageButtonOptions = plocnf
-    )
+p <- show_matrix(epcdata, yrrng = c(1975, maxyr), txtsz = 3, abbrev = T, historic = T, family = fml, plotly = T, width = 300, height = 700) 
 div(p, align = 'center')
 ```
 
