--- a/docs/give-a-day.Rmd
+++ b/docs/give-a-day.Rmd
@@ -8,7 +8,7 @@ output:
 source(here::here('R/setup.R'))
 load(file = here('data/gaddat.RData'))
 yrsel <- 2021
-tots <- gadsum_fun(gaddat)
+tots <- gadsum_fun(gaddat, yrsel = c(2019:yrsel))
 ```
 
 Community involvement has been at the center of Tampa Bay's recovery story since the beginning. Keeping that tradition alive is the Give-a-Day for the Bay volunteer program where community members put in "sweat equity" to protect and restore bay-area parks and preserves. From planting native vegetation to removing debris from mangrove islands, these events encourage the community to get out, give back, and enjoy the bay!
