--- a/docs/tidal-creeks.Rmd
+++ b/docs/tidal-creeks.Rmd
@@ -24,15 +24,15 @@ The tidal creek assessment framework supports tracking of water quality manageme
 
 Tidal creeks are assigned to one of five categories: 
 
-<span style="color:#ADD8E6; text-shadow: 0 0 4px #333; letter-spacing: 2px">__No Data__</span>: Data are unavailable for evaluation.
+<span style="color:#ADD8E6; letter-spacing: 2px">__No Data__</span>: Data are unavailable for evaluation.
 
-<span style="color:#2DC938; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Monitor__</span>: Creek is at or below nitrogen concentrations that protect individual creek types within the larger population of creeks.
+<span style="color:#2DC938; letter-spacing: 2px">__Monitor__</span>: Creek is at or below nitrogen concentrations that protect individual creek types within the larger population of creeks.
 
-<span style="color:#E9C318; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Caution__</span>: Creek nutrients showing signs of elevated nutrient concentrations that may increase risk of eutrophic condition.
+<span style="color:#E9C318; letter-spacing: 2px">__Caution__</span>: Creek nutrients showing signs of elevated nutrient concentrations that may increase risk of eutrophic condition.
 
-<span style="color:#EE7600; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Investigate__</span>: Creek nutrient concentrations above margin of safety to protect creek from potential impairment.  
+<span style="color:#EE7600; letter-spacing: 2px">__Investigate__</span>: Creek nutrient concentrations above margin of safety to protect creek from potential impairment.  
 
-<span style="color:#FF4040; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Prioritize__</span>: Creek nutrient concentrations have exceeded regulatory standard for associated freshwater portion of the tributary in at least one year indicating that actions may be needed to identify remediative measures to reduce nutrients in the creek.
+<span style="color:#FF4040; letter-spacing: 2px">__Prioritize__</span>: Creek nutrient concentrations have exceeded regulatory standard for associated freshwater portion of the tributary in at least one year indicating that actions may be needed to identify remediative measures to reduce nutrients in the creek.
 
 ## Results for `r maxyr`
 
@@ -42,7 +42,7 @@ The following map shows all tidal creeks in the Tampa Bay Watershed and their sc
 show_tdlcrk(dat)
 ```
 
-The current assessment period (`r maxyr`) indicates that `r sumdat['Prioritize']` creeks had a <span style="color:#FF7F50; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Prioritize__</span> score, `r sumdat['Investigate']` had an <span style="color:#FFA500; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Investigate__</span> score, `r sumdat['Caution']` had a <span style="color:#F9FF33; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Caution__</span> score, and `r sumdat['Monitor']` had a <span style="color:#33FF3B; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Monitor__</span> score.  The remaining `r sumdat['No Data']` creeks in the Tampa Bay watershed had insufficient data for the current assessment period to assign a category.  The plot below shows a breakdown of scores for all creeks, with the final score in the right column and the number of survey years in each category used to calculate the final score in the remaining columns. 
+The current assessment period (`r maxyr`) indicates that `r sumdat['Prioritize']` creeks had a <span style="color:#FF7F50; letter-spacing: 2px">__Prioritize__</span> score, `r sumdat['Investigate']` had an <span style="color:#FFA500; letter-spacing: 2px">__Investigate__</span> score, `r sumdat['Caution']` had a <span style="color:#F9FF33; letter-spacing: 2px">__Caution__</span> score, and `r sumdat['Monitor']` had a <span style="color:#33FF3B; letter-spacing: 2px">__Monitor__</span> score.  The remaining `r sumdat['No Data']` creeks in the Tampa Bay watershed had insufficient data for the current assessment period to assign a category.  The plot below shows a breakdown of scores for all creeks, with the final score in the right column and the number of survey years in each category used to calculate the final score in the remaining columns. 
 
 ```{r, out.width = '80%', fig.width = 11, fig.height = 11, fig.align = 'center'}
 show_tdlcrkmatrix(dat, class = c('3M', '2', '3F', '1'), family = fml)
