--- a/docs/water-quality-decision-matrix.Rmd
+++ b/docs/water-quality-decision-matrix.Rmd
@@ -6,7 +6,7 @@ output:
 
 ```{r setup, warning = F, message = F, echo = F}
 source(here::here('R/setup.R'))
-maxyr <- 2021
+maxyr <- 2022
 
 # local file path
 xlsx <- here('data-raw/Results_Updated.xls')
@@ -32,11 +32,11 @@ The water quality report card is produced annually to track status and trends of
 
 Tracking the attainment of bay segment specific targets for chlorophyll and light attenuation provides the framework for developing and initiating bay management actions. TBEP management actions adopted in response to the annually-assessed decision support results are shown below.
 
-<span style="color:#2DC938; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Stay the Course__</span>: Continue planned projects. Report data via annual progress reports and Baywide Environmental Monitoring Report. 
+<span style="color:#2DC938; letter-spacing: 2px">__Stay the Course__</span>: Continue planned projects. Report data via annual progress reports and Baywide Environmental Monitoring Report. 
 
-<span style="color:#E9C318; text-shadow: 0 0 4px #333; letter-spacing: 2px">__Caution__</span>: Review monitoring data and nitrogen loading estimates. Begin/continue TAC and Management Board development of specific management recommendations.
+<span style="color:#E9C318; letter-spacing: 2px">__Caution__</span>: Review monitoring data and nitrogen loading estimates. Begin/continue TAC and Management Board development of specific management recommendations.
 
-<span style="color:#CC3231; text-shadow: 0 0 4px #333; letter-spacing: 2px">__On Alert__</span>: Finalize development and implement appropriate management actions to get back on track.
+<span style="color:#CC3231; letter-spacing: 2px">__On Alert__</span>: Finalize development and implement appropriate management actions to get back on track.
 
 The management category or action is based on the combination of annual outcomes for chlorophyll and light attenuation.   
 
