--- a/docs/tidal-creeks.Rmd
+++ b/docs/tidal-creeks.Rmd
@@ -7,7 +7,7 @@ output:
 ```{r setup, warning = F, message = F, echo = F}
 source(here::here('R/setup.R'))
 
-maxyr <- 2021
+maxyr <- 2022
 
 tbcrks <- tidalcreeks[tbshed, ]
 dat <- anlz_tdlcrk(tbcrks, iwrraw, yr = maxyr)
@@ -42,7 +42,7 @@ The following map shows all tidal creeks in the Tampa Bay Watershed and their sc
 show_tdlcrk(dat)
 ```
 
-The current assessment period (`r maxyr`) indicates that `r sumdat['Prioritize']` creeks had a <span style="color:#FF7F50; letter-spacing: 2px">__Prioritize__</span> score, `r sumdat['Investigate']` had an <span style="color:#FFA500; letter-spacing: 2px">__Investigate__</span> score, `r sumdat['Caution']` had a <span style="color:#F9FF33; letter-spacing: 2px">__Caution__</span> score, and `r sumdat['Monitor']` had a <span style="color:#33FF3B; letter-spacing: 2px">__Monitor__</span> score.  The remaining `r sumdat['No Data']` creeks in the Tampa Bay watershed had insufficient data for the current assessment period to assign a category.  The plot below shows a breakdown of scores for all creeks, with the final score in the right column and the number of survey years in each category used to calculate the final score in the remaining columns. 
+The current assessment period (`r maxyr`) indicates that `r sumdat['Prioritize']` creeks had a <span style="color:#FF7F50; letter-spacing: 2px">__Prioritize__</span> score, `r sumdat['Investigate']` had an <span style="color:#FFA500; letter-spacing: 2px">__Investigate__</span> score, `r sumdat['Caution']` had a <span style="color:#E9C318; letter-spacing: 2px">__Caution__</span> score, and `r sumdat['Monitor']` had a <span style="color:#2DC938; letter-spacing: 2px">__Monitor__</span> score.  The remaining `r sumdat['No Data']` creeks in the Tampa Bay watershed had insufficient data for the current assessment period to assign a category.  The plot below shows a breakdown of scores for all creeks, with the final score in the right column and the number of survey years in each category used to calculate the final score in the remaining columns. 
 
 ```{r, out.width = '80%', fig.width = 11, fig.height = 11, fig.align = 'center'}
 show_tdlcrkmatrix(dat, class = c('3M', '2', '3F', '1'), family = fml)
